[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Transparent Grey.png" type="Texture" id=1]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Dialogue Player.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Text Empty"

[sub_resource type="Animation" id=3]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Dialogue Player" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Test the text"
}

[node name="Dialogue Box" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Dialogue Box"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Dialogue Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = -4.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Testing Testing 1 2 3"
visible_characters = 0
percent_visible = 0.0
text = "Testing Testing 1 2 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_Icon" type="RichTextLabel" parent="Dialogue Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 130.0
margin_top = 29.0
margin_right = -126.0
margin_bottom = 5.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "- X -"
text = "- X -"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialogue Box"]
method_call_mode = 1
"anims/Text Empty" = SubResource( 2 )
anims/TextVisible = SubResource( 3 )

[node name="Cue_Player" type="AudioStreamPlayer" parent="Dialogue Box"]
[connection signal="animation_finished" from="Dialogue Box/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
